--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nixie+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Cutive+Mono&display=swap"
       rel="stylesheet"
     />
     <meta charset="utf-8" />
